# malloc

./: .gitignore  CMakeLists.txt
allocator/: CMakeLists.txt
allocator/include/: allocate.h
allocator/src/: allocate.c  array_alloc.c  deallocate.c
include/: calloc_realloc_perso.h  free_perso.h  malloc_perso.h  malloc_step0.h
src/: calloc_realloc_perso.c  free_perso.c  main.c  main_de_test.c  malloc_perso.c  malloc_step0.c  test_main.c
tests/: CMakeLists.txt
tests/src/: main.c
